--- a/Pages/Users/Index.cshtml
+++ b/Pages/Users/Index.cshtml
@@ -15,12 +15,36 @@
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.User[0].Name)
+                @if (Model.SortOrder == "name_asc")
+                {
+                    <a asp-page="./Index" asp-route-sortOrder="name_desc">▲</a>
+                }
+                else
+                {
+                    <a asp-page="./Index" asp-route-sortOrder="name_asc">▼</a>
+                }
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.User[0].Email)
+                @if (Model.SortOrder == "email_asc")
+                {
+                    <a asp-page="./Index" asp-route-sortOrder="email_desc">▲</a>
+                }
+                else
+                {
+                    <a asp-page="./Index" asp-route-sortOrder="email_asc">▼</a>
+                }
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.User[0].Role)
+                @if (Model.SortOrder == "role_asc")
+                {
+                    <a asp-page="./Index" asp-route-sortOrder="role_desc">▲</a>
+                }
+                else
+                {
+                    <a asp-page="./Index" asp-route-sortOrder="role_asc">▼</a>
+                }
             </th>
             <th></th>
         </tr>
@@ -33,9 +57,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Password)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Role)
