--- a/Pages/Users/Edit.cshtml
+++ b/Pages/Users/Edit.cshtml
@@ -28,9 +28,9 @@
             </div>
             <div class="form-group">
                 <span class="text-danger">*</span>
-                <label asp-for="User.Password" class="control-label"></label>
-                <input asp-for="User.Password" class="form-control" />
-                <span asp-validation-for="User.Password" class="text-danger"></span>
+                <label asp-for="User.Role" class="control-label"></label>
+                <select asp-for="User.Role" class="form-control" asp-items="Model.Roles"></select>
+                <span asp-validation-for="User.Role" class="text-danger"></span>
             </div>
           
             <div class="form-group">
@@ -43,4 +43,3 @@
 <div>
     <a asp-page="./Index">Back to List</a>
 </div>
-
