--- a/Pages/Shared/Components/Navbar/Default.cshtml
+++ b/Pages/Shared/Components/Navbar/Default.cshtml
@@ -52,27 +52,28 @@
             <ul class="navbar-nav">
                 @if (Model.IsAuthenticated)
                 {
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="bi bi-person-circle me-1"></i>@Model.UserName
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#"><i class="bi bi-person me-1"></i>Profile</a></li>
-                            @if (Model.UserRole == CanvasLMS.Models.Role.Student.ToString())
-                            {
-                                <li><a class="dropdown-item" asp-page="/StudentStatement/Index"><i class="bi bi-file-text me-1"></i>Student Statement</a></li>
-                                <li><a class="dropdown-item" asp-page="/ContactUs/Index"><i class="bi bi-envelope me-1"></i>Contact Us</a></li>
-                            }
-                            <li><hr class="dropdown-divider"></li>
-                            <li>
-                                <form method="post" asp-page="/Logout" class="d-inline">
-                                    <button type="submit" class="dropdown-item text-danger">
-                                        <i class="bi bi-box-arrow-right me-1"></i>Logout
-                                    </button>
-                                </form>
-                            </li>
-                        </ul>
-                    </li>
+<li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <i class="bi bi-person-circle me-1"></i>@Model.UserName
+    </a>
+    <ul class="dropdown-menu dropdown-menu-end">
+        <li><a class="dropdown-item" asp-page="/Profile/Index"><i class="bi bi-person me-1"></i> Profile</a></li>
+        @if (Model.UserRole == CanvasLMS.Models.Role.Student.ToString())
+        {
+            <li><a class="dropdown-item" asp-page="/StudentStatement/Index"><i class="bi bi-file-text me-1"></i> Student Statement</a></li>
+            <li><a class="dropdown-item" asp-page="/ContactUs/Index"><i class="bi bi-envelope me-1"></i> Contact Us</a></li>
+        }
+        <li><hr class="dropdown-divider"></li>
+        <li>
+            <form method="post" asp-page="/Logout" class="d-inline">
+                <button type="submit" class="dropdown-item text-danger">
+                    <i class="bi bi-box-arrow-right me-1"></i> Logout
+                </button>
+            </form>
+        </li>
+    </ul>
+</li>
+
                 }
                 else 
                 {
