--- a/Pages/Courses/Create.cshtml
+++ b/Pages/Courses/Create.cshtml
@@ -27,6 +27,12 @@
             </div>
             <div class="form-group">
                 <span class="text-danger">*</span>
+                <label asp-for="Course.Fee" class="control-label"></label>
+                <input asp-for="Course.Fee" class="form-control" />
+                <span asp-validation-for="Course.Fee" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <span class="text-danger">*</span>
                 <label asp-for="Course.FacultyId" class="control-label">Faculty</label>
                 <select asp-for="Course.FacultyId" class="form-control" asp-items="ViewBag.FacultyId">
                     <option value="">-- Select Faculty --</option>
@@ -50,3 +56,7 @@
 <div>
     <a asp-page="Index">Back to List</a>
 </div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
