--- a/Pages/SemesterCourses/Create.cshtml
+++ b/Pages/SemesterCourses/Create.cshtml
@@ -1,26 +1,68 @@
 @page
 @model CanvasLMS.Pages.SemesterCourses.CreateModel
 
-        @{
-        ViewData["Title"] = "Create";
-        }
-        
-        <h1>Create</h1>
-        
-    <h4>SemesterCourse</h4>
-    <hr />
-    <div class="row">
+@{
+    ViewData["Title"] = "Create";
+}
+
+<h1>Create</h1>
+
+<h4>SemesterCourse</h4>
+<hr />
+<div class="row">
     <div class="col-md-4">
-    <form method="post">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form method="post">
+            <div class="form-group">
+                <label for="SemesterId">Semester</label>
+                <select id="SemesterId" name="SemesterId" class="form-control" asp-for="SemesterCourse.SemesterId"
+                    asp-items="ViewBag.SemesterId">
+                    @foreach (var semester in Model.Semesters)
+                    {
+                        <option value="@semester.Id">@semester.Name</option>
+                    }
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="CourseId">Course</label>
+                <select id="CourseId" name="CourseId" class="form-control" asp-for="SemesterCourse.CourseId"
+                    asp-items="ViewBag.CourseId">
+                    @foreach (var course in Model.Courses)
+                    {
+                        <option value="@course.Id">@course.Name</option>
+                    }
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="Day">Day</label>
+                <select id="Day" name="Day" class="form-control">
+                    @foreach (var day in Enum.GetValues(typeof(DayOfWeek)))
+                    {
+                        <option value="@day">@day</option>
+                    }
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="StartTime">Start Time</label>
+                <input type="time" id="StartTime" name="StartTime" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="EndTime">End Time</label>
+                <input type="time" id="EndTime" name="EndTime" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="Fee">Fee</label>
+                <input type="number" id="Fee" name="Fee" class="form-control" />
+            </div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="SemesterCourse.SemesterId" class="control-label"></label>
-                <select asp-for="SemesterCourse.SemesterId" class ="form-control" asp-items="ViewBag.SemesterId"></select>
+                <select asp-for="SemesterCourse.SemesterId" class="form-control"
+                    asp-items="ViewBag.SemesterId"></select>
                 <span asp-validation-for="SemesterCourse.SemesterId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SemesterCourse.CourseId" class="control-label"></label>
-                <select asp-for="SemesterCourse.CourseId" class ="form-control" asp-items="ViewBag.CourseId"></select>
+                <select asp-for="SemesterCourse.CourseId" class="form-control" asp-items="ViewBag.CourseId"></select>
                 <span asp-validation-for="SemesterCourse.CourseId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -35,6 +77,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
-
