--- a/Pages/Shared/Components/Navbar/Default.cshtml
+++ b/Pages/Shared/Components/Navbar/Default.cshtml
@@ -23,7 +23,7 @@
                                 <i class="bi bi-mortarboard me-1"></i>Student Services
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" asp-page="/CourseEnrollments/Enroll/Index">Course Enrollment</a></li>
+                                <li><a class="dropdown-item" asp-page="/CourseEnrollments/Enroll/Index">Semester Enrollment</a></li>
                                 <li><a class="dropdown-item" asp-page="/CourseEnrollments/TimeTableMatching/Index">Timetable Matching</a></li>
                                 <li><a class="dropdown-item" asp-page="/CourseEnrollments/AddDrop/Index">Course Add/Drop</a></li>
                                 <li><a class="dropdown-item" asp-page="/CourseReviews/Index">Course Evaluation</a></li>
