--- a/Pages/SemesterCourses/Create.cshtml
+++ b/Pages/SemesterCourses/Create.cshtml
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col-md-4">
         <form method="post">
-            <div class="form-group">
+            @* <div class="form-group">
                 <label for="CourseId">Course</label>
                 <select id="CourseId" name="CourseId" class="form-control" asp-for="SemesterCourse.CourseId"
                     asp-items="ViewBag.CourseId">
@@ -21,7 +21,7 @@
                         <option value="@course.Id">@course.Name</option>
                     }
                 </select>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label for="Day">Day</label>
                 <select id="Day" asp-for="SemesterCourse.Day" class="form-control">
