--- a/Pages/Payments/Index.cshtml
+++ b/Pages/Payments/Index.cshtml
@@ -25,9 +25,8 @@
                             <tr>
                                 <th>Course</th>
                                 <th>Student</th>
-                                <th>Amount (RM)</th>
+                                <th class="text-end">Amount (RM)</th>
                                 <th>Created Date</th>
-                                <th>Actions</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -36,19 +35,25 @@
                                 <tr>
                                     <td>@item.SemesterCourse.Course.Name</td>
                                     <td>@item.Student.User.Name</td>
-                                    <td>@item.SemesterCourse.Fee.ToString("N2")</td>
+                                    <td class="text-end">@item.SemesterCourse.Fee.ToString("N2")</td>
                                     <td>@DateTime.UtcNow.ToString("dd/MM/yyyy")</td>
-                                    <td>
-                                        <div class="btn-group">
-                                            <a href="#" class="btn btn-sm btn-primary">
-                                                <i class="bi bi-credit-card"></i> Pay Now
-                                            </a>
-                                        </div>
-                                    </td>
                                 </tr>
                             }
                         </tbody>
                     </table>
+
+                    <div class="border-top mt-3 pt-3">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <h5 class="mb-0">Total Amount: RM @Model.TotalAmount.ToString("N2")</h5>
+                            </div>
+                            <div class="col text-end">
+                                <button type="button" class="btn btn-primary">
+                                    <i class="bi bi-credit-card"></i> Pay All Pending Fees
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             }
         </div>
